# Weed-Detection-deep-weeds-

./: .gitignore  README.md  init_setup.sh  kafka_consumer.py  kafka_producer.py  params.yaml  pyproject.toml  requirements_dev.txt  setup.py  template.py
configs/: config.yaml
logs/: running_logs.logs
research/: Untitled.ipynb  trials_fixed.ipynb
research/yolo_dataset/: data.yaml
research/yolo_dataset_255/: data.yaml
src/weed_detection/: __init__.py
src/weed_detection/components/: data_ingestion.py  data_transformation.py  data_validation.py  kafka_consumer.py  kafka_producer.py  model_evaluation.py  model_export.py  model_quantization.py  modell_training.py  params.yaml  test.ipynb
src/weed_detection/components/artifacts/data_ingestion/kafka_data/: latest_artifact.json
src/weed_detection/components/artifacts/data_ingestion/kafka_data/v_20260307_133112/: artifact.json
src/weed_detection/components/configs/: config.yaml
src/weed_detection/config/: configuration.py
src/weed_detection/constants/: __init__.py  constant.py
src/weed_detection/entity/: artifact_entity.py  config_entity.py
src/weed_detection/utils/: utility.py
